--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ "homepage": "https://priyasingh65.github.io/analytics-dashboard-assessment/",
+{ "homepage": "https://priyasingh65.github.io/Dashboard-EV/",
   "name": "analytics-dashboard-assessment",
   "version": "0.1.0",
   "private": true,
